<resources>
    <string name="app_name">Stroop Effect</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_default">Default</string>

    <string name="home_fragment_text_view_introduction">Test your cognitive skills</string>
    <string name="home_fragment_text_view_choose">Select your gender</string>
    <string name="home_fragment_radio_button_male">Male</string>
    <string name="home_fragment_radio_button_female">Female</string>
    <string name="home_fragment_button_start">Start the test</string>
    <string name="home_fragment_button_results">Show results</string>
    <string name="home_fragment_text_view_instructions">In every simulation there is a circle. Your task is to tap the square which has the NAME of the colour of the circle.</string>
    <string name="home_fragment_text_view_instructions1">Keep your eyes open and your mind focused!</string>

    <string name="simulation_fragment_text_view_instructions">Click the name of the color of the circle</string>
    <string name="simulation_fragment_image_view_description">Main image view</string>

    <string name="results_fragment_text_view_congruent">c:   </string>
    <string name="results_fragment_text_view_incongruent">i:   </string>
</resources>
